<resources>
    <string-array name="cat_names">
        <item>Рыжик</item>
        <item>Барсик</item>
        <item>Мурзик</item>
        <item>Мурка</item>
        <item>Йоша</item>
        <item>Масяня</item>
        <item>Кабася</item>
        <item>Пушок</item>
        <item>Дымка</item>
        <item>Кузя</item>
        <item>Китти</item>
        <item>Котяня</item>
        <item>Симба</item>
    </string-array>
    <string name="app_name">BigApplication</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="hello">Hello!</string>
    <string name="enter_your_email_and">Enter your email and password below</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="type_e_mail_here">type e-mail here</string>
    <string name="type_password_here">type password here</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="fill_out_the_profile_and">Fill out the profile and go to the application!</string>
    <string name="register">REGISTER</string>
    <string name="by_clicking_register_you">By clicking Register you agree to our Terms \n and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="settings">Settings</string>
    <string name="user_photo">user photo</string>
    <string name="android_trainee">Android Trainee</string>
    <string name="_5295_gladiator_walks_apk_110">5295 Gladiator Walks Apk. 110</string>
    <string name="f">f</string>
    <string name="in">in</string>
    <string name="edit_profile">Edit profile</string>
    <string name="view_my_contacts">VIEW my contacts</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="invalid_password">Your password must be at least 8 characters long.</string>
    <string name="restore_your_password">Restore your password.</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="imageview_flag">imageViewFlag</string>
    <string name="ladislaw_pszczelarz">Ladislaw Pszczelarz</string>
    <string name="trash_can">trash can</string>
    <string name="log_out">Log out</string>
    <string name="contacts">Contacts</string>
    <string name="arrow_back">arrow back</string>
    <string name="search">search</string>
    <string name="add_new_contact">Add new contact:</string>
    <string name="type_name_here">type name here</string>
    <string name="type_surname_here">type surname here</string>
    <string name="type_career_here">type career here</string>
    <string name="add_contacts">Add contacts</string>
</resources>
