<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent.SideMargin"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        style="@style/WrapContent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_weight" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/WrapContent.Centered"
        android:text="@string/hello"
        android:textSize="@dimen/title_text"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitleDescriptor"
        style="@style/WrapContent.Centered.Small"
        android:text="@string/enter_your_email_and"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewEmail"
        style="@style/WrapContent.Left.Light"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:text="@string/e_mail"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleDescriptor" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        style="@style/EditText"
        android:autofillHints="e-mail"
        android:hint="@string/type_e_mail_here"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPassword"
        style="@style/WrapContent.Left.Light"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        style="@style/EditText"
        android:autofillHints="password"
        android:hint="@string/type_password_here"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/textViewPassword" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        style="@style/WrapContent.Left.CheckBox"
        android:text="@string/remember_me"
        app:layout_constraintEnd_toStartOf="@+id/textViewForgotPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewForgotPassword"
        style="@style/WrapContent.Right"
        android:text="@string/forgot_your_password"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxRememberMe"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxRememberMe"
        app:layout_constraintTop_toTopOf="@id/checkBoxRememberMe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.BigButton"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@id/barrierMain" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierMain"
        style="@style/WrapContent"
        app:barrierDirection="top"
        app:constraint_referenced_ids="textViewSignUp,textViewSignUpDescriptor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUpDescriptor"
        style="@style/WrapContent.Left"
        android:layout_marginEnd="@dimen/general_side_margin"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:text="@string/don_t_have_account"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSignUp"
        style="@style/WrapContent.Right"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="@id/textViewSignUpDescriptor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewSignUpDescriptor" />

</androidx.constraintlayout.widget.ConstraintLayout>