<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/WrapContent.Left"
        android:textColor="@color/black"
        android:text="@string/add_new_contact"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextName"
        style="@style/EditText"
        android:autofillHints="name"
        android:hint="@string/type_name_here"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextSurname"
        style="@style/EditText"
        android:autofillHints="surname"
        android:hint="@string/type_surname_here"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextCareer"
        style="@style/EditText"
        android:autofillHints="career"
        android:hint="@string/type_career_here"/>



</LinearLayout>
