<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    tools:context=".LoggedActivity"
    tools:ignore="MissingConstraints">

    <View
        android:id="@+id/textViewTopBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/textViewBottomBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.5" />

    <View
        android:id="@+id/textViewBottomBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTopBackground"
        app:layout_constraintVertical_weight="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewLoggedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_side_margin"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/settings"
        android:textSize="@dimen/title_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewProfileImage"
        android:layout_width="@dimen/iconLogged"
        android:layout_height="@dimen/iconLogged"
        android:contentDescription="@string/user_photo"
        android:src="@drawable/vladface"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLoggedTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text=""
        android:textSize="@dimen/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfileImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_trainee"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/medium_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUserName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUserAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/_5295_gladiator_walks_apk_110"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/medium_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewUserJob" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewSocialFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/additional_side_margin"
        android:contentDescription="@string/facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewSocialLinkedin"
        app:srcCompat="@drawable/ic_f" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewSocialLinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_vertical_margin"
        android:contentDescription="@string/linkedin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewBottomBackground"
        app:srcCompat="@drawable/ic_in" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewSocialVKontakte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/additional_side_margin"
        android:contentDescription="@string/vkontakte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewSocialLinkedin"
        app:srcCompat="@drawable/ic_vk" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditProfile"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.BigButton"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/general_side_margin"
        android:layout_marginEnd="@dimen/general_side_margin"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/buttonViewMyContacts"
        app:strokeColor="@color/black"
        tools:ignore="TouchTargetSizeCheck" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonViewMyContacts"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.BigButton"
        android:layout_marginStart="@dimen/general_side_margin"
        android:layout_marginEnd="@dimen/general_side_margin"
        android:layout_marginBottom="@dimen/item_vertical_margin"
        android:text="@string/view_my_contacts"
        app:layout_constraintBottom_toBottomOf="@id/textViewBottomBackground"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>