<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    tools:ignore="MissingConstraints">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/WrapContent.Centered"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/contacts"
        android:textSize="@dimen/title_text"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBack"
        style="@style/WrapContent.Left"
        android:layout_marginStart="@dimen/general_side_margin"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewTitle"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewSearch"
        style="@style/WrapContent.Right"
        android:layout_marginEnd="@dimen/general_side_margin"
        android:contentDescription="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewTitle"
        app:srcCompat="@drawable/ic_search" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddContacts"
        style="@style/WrapContent.Left"
        android:layout_marginStart="@dimen/general_side_margin"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:text="@string/add_contacts"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <View
        android:id="@+id/textViewBottomBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/textViewAddContacts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewContacts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/general_side_margin"
        android:layout_marginEnd="@dimen/general_side_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewBottomBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>